{{$NEXT}}
  - Minion requirement bumped to 10.0.
  - Changed reset method to require options for what to reset and allow for
    locks to be reset without resetting the whole queue.

4.005     2019-08-05 11:00:01 EDT
  - Allow fields to be removed with note method.

4.004     2019-07-09 00:53:20 EDT
  - Add time field to list_jobs method.

4.003     2019-06-21 18:06:07 EDT
  - Ignore missing workers for jobs in the minion_foreground named queue to
    make debugging very slow jobs easier.

4.002     2018-10-03 13:58:15 EDT
  - Optimize repair query (yrjustice, #15, #16)

4.001     2018-04-21 19:29:24 EDT
  - Implement EXPERIMENTAL history method used for Minion Admin plugin history graph.

4.000     2018-04-16 14:58:35 EDT
  - Minion requirement bumped to 9.0.
  - Replace queue, state, and task options of list_jobs method with queues,
    states, and tasks options.
  - Replace name option of list_locks method with names option.
  - Replace key/value arguments of note method with a hash reference.
  - Add parents option to retry_job method.
  - Re-add active_locks stats field.

3.003     2017-12-10 16:00:33 EST
  - Remove active_locks stats field as it was incorrect.
  - Fix list_locks to exclude already expired locks.

3.002     2017-12-09 21:42:19 EST
  - Add list_locks method.
  - Add active_locks field to stats.

3.001     2017-11-28 21:57:15 EST
  - Fix condition in dequeue that could lead to calling usleep with a negative
    time. (toratora, #12)

3.000     2017-11-17 20:20:58 EST
  - Minion requirement bumped to 8.0.
  - Remove job_info and worker_info methods.
  - Support ids option and return total from list_jobs and list_workers methods.
  - Add uptime field to stats method (always undef for SQLite).

2.004     2017-11-11 16:17:27 EST
  - Add dequeue_interval attribute and check for jobs in 0.5 second intervals
    by default. (#10)

2.003     2017-08-07 16:04:18 EDT
  - Fix tests for rethrown job exceptions in Minion 7.05.
